--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,55 @@
+astroid==3.3.8
+blinker==1.9.0
+click==8.1.8
+command-not-found==0.3
+cryptography==3.4.8
+dbus-python==1.2.18
+dill==0.3.9
+distlib==0.3.9
+distro==1.7.0
+distro-info===1.1build1
 exceptiongroup==1.2.2
+filelock==3.17.0
+Flask==3.1.0
+greenlet==3.1.1
+httplib2==0.20.2
+importlib-metadata==4.6.4
 iniconfig==2.0.0
+isort==6.0.0
+itsdangerous==2.2.0
+jeepney==0.7.1
+Jinja2==3.1.5
+keyring==23.5.0
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+MarkupSafe==3.0.2
+mccabe==0.7.0
+more-itertools==8.10.0
+netifaces==0.11.0
+oauthlib==3.2.0
 packaging==24.2
+platformdirs==4.3.6
 pluggy==1.5.0
+PyGObject==3.42.1
+PyJWT==2.3.0
+pylint==3.3.4
+pylintconfig==0.1.1
+pyparsing==2.4.7
 pytest==8.3.4
+python-apt==2.3.0+ubuntu2.1
+PyYAML==5.4.1
+SecretStorage==3.3.1
+six==1.16.0
+SQLAlchemy==2.0.38
+systemd-python==234
 tomli==2.2.1
+tomlkit==0.13.2
+typing_extensions==4.12.2
+ubuntu-advantage-tools==27.12
+ufw==0.36.1
+unattended-upgrades==0.1
+virtualenv==20.29.2
+wadllib==1.3.6
+Werkzeug==3.1.3
+zipp==1.0.0
